Cache Control Headers hinzugefügt

--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,11 @@ Header set Content-Security-Policy "default-src 'self'"
 Header set X-Content-Type-Options nosniff
 Header set Strict-Transport-Security "max-age=31536000" env=HTTPS
 
+# Cache Control
+<FilesMatch "\.(jpg|jpeg|png|gif|js|css|eot|svg|ttf|woff|woff2)$">
+  Header set Cache-Control "max-age=3600, public"
+</FilesMatch>
+
 # Rewrite engine
 RewriteEngine On
 
